   for columns where we store number of reads and similar values and
   where we do not already set type to bigint. Some NovaSeq runs produce
   more data than we envisaged when these tables were set up.
 - Update pulldown_metrics autoqc check to use the up-to-date Picard
   metrics via GATK, use CRAM files instead of BAM files as input.  

release 69.8.1
 - bug fix npg_substitution_metrics.pl to not bail on single read data

release 69.8.0
 - mqc skipper - a more generic way to disregard spiked-in controls when
   counting the number of studies the samples in the run belong to. The change
   is driven by the fact that spiked-in controls can now belong to a number of
   different studies.
 - replace fastx_toolkit use with seqtk
 - npg_substitution_metrics.pl script clean-up

release 69.7.0
 - added new npg_substitution_metrics.pl script
 - move from Travis CI to GitHub Actions
 - switch to node 14 for CI, using npm from default conda pkg
 - remove dependency on npg_common::sequence::reference::base_count, which
   has been moved to an internal repository and is no longer available for
   the CI builds
 - make labels for number of reads in SeqQC generic artic display
   consistent with display for bam flagstats data, ie use 'reads'
   instead of 'fragments'
 - do not generate autoqc generic artic results for spiked-in control

release 69.6.1
 - mqc skipper bug fix - inspect qc outcomes for review autoqc results
   only

release 69.6.0
 - GbS Minor_v1.0 plex included in genotype data extracted from iRODS 
 - change the type of the stats column in the 'samtools_stats' table from
   'mediumglob' to 'longglob' to accommodate the ampliconstats data for
   384 samples
 - mqc skipper - no fast tracking if any of mqc_outcome values are
   undefined in the review autoqc objects for a lane 

release 69.5.0
 - measures to speed-up generation of SeqQC pages:
   - add a prefetch for compositions and components when retrieving autoqc
     results from a database;